clusters/taplab/cluster-config/app-resources/gateway-instance-configuration/customer-details-gateway/customer-details-gateway-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: customer-details-gateway
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: customer-details-gateway
      port: 80
  virtualhost:
    fqdn: customer-details.a3.fynesy.com
    tls:
      secretName: taptlscert
